# LightLX-Windows

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: DESIGN.md
lightlx/: __init__.py  cache.py  cli.py  generic.py  model.py  state.py  weights.py
